<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".InfoActivity">

<!--    <ImageView-->
<!--        android:id="@+id/logo"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@id/updateButton"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginBottom="20sp"-->
<!--        android:alpha="0.15"-->
<!--        android:src="@drawable/lakehead_print_logo"-->
<!--        android:contentDescription="@string/lu_logo" />-->

    <Button
        android:id="@+id/backButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/dm_sans"
        android:text="@string/back" />

    <TextView
        android:id="@+id/settingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/settings"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/settingsTextView"
        android:text="@string/tap_your_name_or_permit_number_to_change"
        android:textAlignment="textStart"
        android:textColor="@color/grey"
        android:fontFamily="@font/dm_sans"
        android:textSize="15sp" />

    <!-- Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/infoNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageTextView"
        android:hint="@string/name"
        android:layout_marginTop="20sp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/infoNameTextInputEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:fontFamily="@font/dm_sans"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Permit Number Input -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/infoPermitTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/permitNumber"
        android:layout_below="@id/infoNameTextInputLayout"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/baseline_directions_car_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/infoPermitTextInputEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/dm_sans"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/infoPermitTextInputLayout"
        android:text="@string/update"
        android:fontFamily="@font/dm_sans"
        android:layout_centerHorizontal="true"
        android:enabled="false" />

    <Button
        android:id="@+id/adminScreenButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/updateButton"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/orange"
        android:text="@string/go_to_admin_screen"
        android:fontFamily="@font/dm_sans"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/adminScreenButton"
        android:text="@string/logout"
        android:fontFamily="@font/dm_sans"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/red" />

</android.widget.RelativeLayout>